--- a/src/app/calc/calc.component.html
+++ b/src/app/calc/calc.component.html
@@ -4,7 +4,11 @@
     <input type="number" [(ngModel)]="num2" name="num2">
     <br><br>
     <button (click)="calc()">Somar</button>
-    {{sum}}
+    <button (click)="sub()">Subtrair</button>
+    <button (click)="mult()">Multiplicar</button>
+    <button (click)="div()">Divisão</button>
+    {{result}}
+
 </form>
 
 
